# phoenix

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  bootstrap.py  main.py
app/api/: routes_tasks.py
app/channels/cli/: main.py  tui.py
app/channels/telegram/: __init__.py  bot.py
app/channels/web/: __init__.py
app/core/: __init__.py  config.py  logging.py
app/db/: repository.py
app/services/: __init__.py  codex_executor.py  gemini_chat.py  gitops.py  kagi_search.py  lifecycle.py  orchestrator.py  shell.py  types.py  validator.py
scripts/: health_check.ps1  restart_service.ps1  rollback_revert.ps1  run_lint.ps1  run_tests.ps1
tests/: test_codex_executor.py  test_orchestrator.py  test_repository.py  test_telegram_bot.py
